# SkyPulseUAV

./: .gitignore  LICENSE  README.md  README_ZH.md
Code Doxygen/: Doxyfile
Desktop_Qt_6_6_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Documents/: README.md
Hardware/: README.md
Motherboard_STM32_Code/: .cproject  .mxproject  .project  README.txt  STM32_IR_US_Slave.ioc
SkyPulseUAV_Device/: .gitignore  CMakeLists.txt  README.MD  README.txt  Raspberrypi.cmake  create_link.txt  main.cpp  raspberrypi.cmake
SkyPulseUAV_Device/STM32_IR_US_Slave/: .cproject  .mxproject  .project  README.txt  STM32_IR_US_Slave.ioc
SkyPulseUAV_Device/STM32_IR_US_Slave/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
SkyPulseUAV_Device/STM32_IR_US_Slave/Core/Src/: gpio.c  main.c  spi.c  stm32f1xx_it.c  tim.c  usart.c
SkyPulseUAV_Device/STM32_IR_US_Slave/Debug/: STM32_IR_US_Slave.elf  STM32_IR_US_Slave.list  STM32_IR_US_Slave.map  makefile  objects.list  sources.mk
SkyPulseUAV_Device/STM32_IR_US_Slave/Debug/Core/Src/: main.cyclo  main.su  spi.cyclo  spi.su  stm32f1xx_hal_msp.cyclo  stm32f1xx_hal_msp.su  stm32f1xx_it.cyclo  stm32f1xx_it.su  subdir.mk  tim.cyclo  tim.su  usart.cyclo  usart.su
SkyPulseUAV_Device/STM32_IR_US_Slave/Debug/Core/Startup/: subdir.mk
SkyPulseUAV_Device/STM32_IR_US_Slave/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_spi.cyclo  stm32f1xx_hal_spi.su  stm32f1xx_hal_tim.cyclo  stm32f1xx_hal_tim.su  stm32f1xx_hal_tim_ex.cyclo  stm32f1xx_hal_tim_ex.su  stm32f1xx_hal_uart.cyclo  stm32f1xx_hal_uart.su  subdir.mk
SkyPulseUAV_Device/include/: AttiDataCollect.hpp  BMP180.h  BMP180Thread.h  Control.h  ControlThread.h  IIC.h  IRAndUS.h  MPU6050.h  MPU6050Thread.h  MahonyFilter.h  Motor.h  STM32.h  Sensor.h  TCP.h  UART.h
SkyPulseUAV_Device/lib/: libsockpp.so.2  libsockpp.so.2.0.0
SkyPulseUAV_Device/new_class/: BMP180.h  IIC.cpp  MPU6050.cpp  MPU6050.h  MPU6050Thread.cpp  MahonyFilter.cpp  MahonyFilter.h
SkyPulseUAV_Device/recycle/: AttiFilter.cpp  AttiFilter.hpp  MPU6050.cpp  MPU6050.h  MahonyAHRS.c  MahonyFilter.cpp
SkyPulseUAV_Device/recycle/old_project/: AttiDemo.cpp  README.txt  raspberrypi.cmake
SkyPulseUAV_Device/recycle/old_project/include/: BaroDataCollect.hpp  MahonyAHRS.h  SonicDataCollect.hpp  sensor_data.hpp
SkyPulseUAV_Device/recycle/old_project/new_class/: BMP180.cpp  IIC.cpp  IIC.h  MPU6050.cpp
SkyPulseUAV_Device/recycle/old_project/src/: AttiDataCollect.cpp  AttiFunc.cpp  BaroFunc.cpp  SonicDataCollect.cpp
SkyPulseUAV_Device/src/: BMP180.cpp  BMP180Thread.cpp  BaroDataCollect.cpp  Control.cpp  ControlThread.cpp  IIC.cpp  IRAndUS.cpp  MPU6050.cpp  MPU6050Thread.cpp  MahonyFilter.cpp  MahonyFilterThread.cpp  Motor.cpp  STM32.cpp  SonicFunc.cpp  TCP.cpp  TCPThread.cpp  UART.cpp
SkyPulseUAV_Device/test/: CMakeLists.txt  tcpserver.py  test.cpp
SkyPulseUAV_Device/test/testLib/: libboost_unit_test_framework.so.1.74.0
SkyPulseUAV_Device/uarttest/: serialplot.py
SkyPulseUAV_FCS/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  threadpool.cpp  threadpool.h
SkyPulseUAV_FCS/ALGORITHM/: mahonyfilter.cpp  mahonyfilter.h  pidcontroller.cpp  pidcontroller.h
SkyPulseUAV_FCS/COMM/: tcp.cpp  tcp.h
SkyPulseUAV_FCS/DRIVER/: barometer_bmp180.cpp  barometer_bmp180.h  esc_pwm_driver.cpp  esc_pwm_driver.h  flightcontrol.cpp  flightcontrol.h  fligthcontrol.cpp  fligthcontrol.h  gpiointerrupthandler.cpp  gpiointerrupthandler.h  gyroacelemeter_gy521.cpp  gyroacelemeter_gy521.h  i2c_device.cpp  i2c_device.h  i2c_manager.cpp  i2c_manager.h  i2cdriver.cpp  i2cdriver.h  magnetometer_gy271.cpp  magnetometer_gy271.h  motorpwm.cpp  motorpwm.h  videocapture.cpp  videocapture.h  videostreamer.cpp  videostreamer.h
SkyPulseUAV_FCS/MIDDLEWARES/: DataHandlerFactory.h  MediatorInterface.h  Observer.h  concretemediator.cpp  concretemediator.h  datadecoder.cpp  datadecoder.h  decodetask.cpp  decodetask.h  handler_bmp180.cpp  handler_bmp180.h  observable.h  sensorreader.cpp  sensorreader.h  tcp.cpp  tcp.h
SkyPulseUAV_FCS/SENSOR/: barometer_bmp180.cpp  barometer_bmp180.h  bmp180.cpp  bmp180.h  gy271.cpp  gy271.h  gyroacelemeter_gy521.cpp  gyroacelemeter_gy521.h  magnetometer_gy271.cpp  magnetometer_gy271.h  meg_compass.cpp  meg_compass.h  mpu6050.cpp  mpu6050.h  sensormanager.cpp  sensormanager.h
SkyPulseUAV_FCS/SYSTEM/: droneconfigmanager.cpp  droneconfigmanager.h  mainsystem.cpp  mainsystem.h  sensormanager.cpp  sensormanager.h
SkyPulseUAV_FCS/TOOLS/: databasemanager.cpp  databasemanager.h  observable.cpp  observable.h  observer.h  threadpool.cpp  threadpool.h
SkyPulseUAV_GroundStation/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
SkyPulseUAV_GroundStation/COMM/: Bluetooth.cpp  Bluetooth.h  TCP.cpp  TCP.h  UDP.cpp  UDP.h
SkyPulseUAV_GroundStation/PLOTING/: Mahony_Plot.cpp  Mahony_Plot.h
SkyPulseUAV_GroundStation/SENSOR/: MAG_HMC5883L.cpp  MAG_HMC5883L.h
SkyPulseUAV_GroundStation/SYSTEM/: mainwindow.cpp  mainwindow.h  mainwindow.ui  observable.cpp  observable.h  observer.h  pooltask.cpp  pooltask.h
SkyPulseUAV_GroundStation/TOOLS/: DataHandler.h  DataHandlerFactory.h  MediatorInterface.h  concretemediator.cpp  concretemediator.h  datadecoder.cpp  datadecoder.h  datahandlerfactory.cpp  datahandlerfactory.h  datamanager.cpp  datamanager.h  decodetask.cpp  decodetask.h  handler_bmp180.cpp  handler_bmp180.h  handlerbmp180.cpp  handlerbmp180.h
SkyPulseUAV_Hardware/: Motherboard_PCB.PcbDoc
SkyPulseUAV_Motherboard/: Motherboard_Schematic.SchDoc  SkyPulseUAV.PcbLib  SkyPulseUAV.SchLib  SkyPulseUAV_Connector.SchDoc  SkyPulseUAV_MCU.Harness  SkyPulseUAV_MCU.SchDoc  SkyPulseUAV_Motherboard.Annotation  SkyPulseUAV_Motherboard.PrjPcb  SkyPulseUAV_Motherboard.PrjPcbStructure  SkyPulseUAV_Motherboard.SchDoc  SkyPulseUAV_Power.Harness  SkyPulseUAV_PowerModule.SchDoc
SkyPulseUVA_FCS/Flight_Control_System/: CMakeLists.txt  ThreadPool.h
SkyPulseUVA_GroundStation/: CMakeLists.txt  TCP.h  main.cpp  mainwindow.cpp  (+1 more)
(+2425 files in other folders)
